dnl Process this file with autoconf to produce a configure script.
AC_INIT(fdlibm, , [freemint-discuss@lists.sourceforge.net], , [https://github.com/freemint/fdlibm])
AC_PREREQ(2.52)
AC_CONFIG_SRCDIR([fdlibm.h])
AC_CONFIG_AUX_DIR([config-aux])

dnl Canonical system information.
AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_CHECK_TOOL(AR, ar)
if test "$AR" = ""; then AC_MSG_ERROR([ar missing]); fi

dnl Checks for libraries.

dnl Checks for header files.
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_SUBST(ac_aux_dir)
AC_OUTPUT(Makefile)
